# calvin

./: .gitignore  LICENSE.md  README.md  main-cosvf.py  main-cosvfea.py  pyproject.toml  render.yaml
calvin/: __init__.py  benders.py  calvin.py  capacity.py  cosvfea.py  ensemble.py  env_flow.py  extensive_form.py  futures.py  harness.py  highs_model.py  plots.py  postprocessor.py  relax.py  scenario.py  trade.py
calvin/app/: __init__.py  __main__.py  build.sh  schemas.py  server.py  state.py
calvin/app/frontend/: index.html  package-lock.json  package.json  vite.config.js
calvin/app/routers/: network.py  results.py
calvin/data/: cosvf_params_canonical.csv  delta_tributaries.csv  delta_unimpaired_wy.csv  expansion_arcs.csv  expansions.csv  facilities.csv  facility_profiles.csv  operation_groups.csv  operation_nodes.csv  pwp_nodes.csv
calvin/data/cosvf-default/: README.md  cosvf-data-prep.py  cosvf-params-example.csv  cosvf-params.csv  cosvf-prep.py  inflows.csv  (+3 more)
calvin/network/: __init__.py  apply_changes.py  cli.py  loader.py  matrix.py  prepare.py  query.py  validate.py
scripts/: calvin-cosvf-ea.py  calvin-cosvf.py  calvin-eopc.py  calvin-pf-astep.py  calvin-pf-cap.py  calvin-pf-nogwod.py  calvin-pf.py  report.py  run_config.py
scripts/configs/: calvin-cosvf-ea-gcp.toml  calvin-cosvf-ea.toml  calvin-cosvf.toml  calvin-eopc.toml  calvin-pf-astep.toml  calvin-pf-cap.toml  calvin-pf-nogwod.toml  calvin-pf.toml
scripts/gcp/: 01_create_instance.sh  02_setup_vm.sh  03_sync_and_run.sh  04_fetch_results.sh  README.md  _gcloud_rsync_rsh.sh  _remote_setup.sh
(+22 files in other folders)
